--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
         - uses: actions/checkout@v3
 
         - name: Install dependencies
-          run: sudo apt-get install make nasm gcc xorriso
+          run: sudo apt-get install make nasm gcc xorriso mtools
 
         - name: Build ISO
           run: make build
