--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,10 @@ on:
     push:
         branches:
             - master
+        paths-ignore:
+            - 'README.md'
+            - 'LICENSE'
+            - '.gitignore'
 
 jobs:
     build:
